src/test/resources/wacc_examples/valid/class/integration/importFiles/classC.wacc
begin
  include "stdlib.wacc"
  include "classD.wacc"
  include "../extensionIntegration.wacc"

  class c extends d {
    int t
    string foo() is
      println "I am a parent method!";
      println superParentField;
      string _ = call bar();
      return "hello"
    end
  }

  skip
end