src/test/resources/wacc_examples/invalid/semanticErr/imports/importedClassAlreadyDeclared.wacc
begin
  include "importFiles/fileWithClass.wacc"
  class a {
    int z
  }
  skip
end